--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -3,35 +3,36 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 30px;
+    margin-top: 5rem;
 }
 .footer-logo{
     display: flex;
     align-items: center;
-    gap: 30px;
+    gap: 20px;
 }
 .footer-logo p{
     color: #383838;
-    font-size: 46px;
+    font-size: 34px;
     font-weight: 700;
 }
 .footer-links{
     display: flex;
     list-style: none;
-    gap: 50px;
+    gap: 35px;
     color: #252525;
-    font-size: 20px;
+    font-size: 18px;
 }
 .footer-links li{
     cursor: pointer;
 }
 .footer-social-icon{
     display: flex;
-    gap: 20px;
+    gap: 16px;
 }
 .footer-icons-container{
-    padding: 10px;
-    padding-bottom: 6px;
+    padding: 5px;
+    padding-bottom: 3px;
     background: #fbfbfb;
     border: 1px solid #ebebeb;
 }
@@ -39,7 +40,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 15px;
     width: 100%;
     margin-bottom: 30px;
     color: #1a1a1a;
